BugFix: Buttons into form with fixed css

--- a/src/assets/less/action-buttons.less
+++ b/src/assets/less/action-buttons.less
@@ -12,18 +12,18 @@ form.fa {
 
 form.form-actions {
   display: inline-block;
-
-  button {
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    margin: 0;
-    vertical-align: top;
-  }
 }
 
 .row-actions > a,
 .row-actions > form
 {
 	margin-right: 3px;
+}
+
+.row-actions > form > button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+  vertical-align: top;
 }
